Bug 108123 - Crash in: writerfilter::dmapper::DomainMapper_Impl::getTableManager()
Summary: Crash in: writerfilter::dmapper::DomainMapper_Impl::getTableManager()
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: highest critical
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.5.0 target:5.4.0.1
Keywords: bibisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2017-05-26 13:20 UTC by Telesto
Modified: 2017-06-08 06:04 UTC (History)
3 users (show)

See Also:
Crash report or crash signature: ["writerfilter::dmapper::DomainMapper_Impl::getTableManager()"]


Attachments
backtrace (28.58 KB, text/x-log)
2017-05-26 13:52 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-05-26 13:20:03 UTC
This bug was filed from the crash reporting server and is br-bc55a177-a8e1-4b33-857d-80d2d0b000be.
=========================================

1. Open attachment 43973 [details] (bug 34876)
2. Select all (CTRL+A) and copy everything (CTRL+C)
3. Open a new document
4. Paste as RTF: Special paste CTRL+SHIFT+V -> RTF
Comment 1 Xisco Faulí 2017-05-26 13:35:11 UTC
I can't reproduce it in

Version: 5.5.0.0.alpha0+
Build ID: 7662b11cad6105d56fb9acc9c431c89d3b68dc89
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-05-20_10:09:09
Locale: es-ES (es_ES); Calc: group

I see 3 crashes reported by you that I can't reproduce. Do you still reproduce them if you reset your profile ? if yes, probably related to OpenGL?
Comment 2 Xisco Faulí 2017-05-26 13:41:37 UTC
Ok, i've just reproduced following these steps:

1. Open attachment 43973 [details] (bug 34876)
2. Click on Page 5
3. Select all (CTRL+A) and copy everything (CTRL+C)
4. Open a new document
5. Paste as RTF: Special paste CTRL+SHIFT+V -> RTF

Reproduced in

Version: 5.5.0.0.alpha0+
Build ID: 7662b11cad6105d56fb9acc9c431c89d3b68dc89
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-05-20_10:09:09
Locale: es-ES (es_ES); Calc: group

and

Version: 5.4.0.0.alpha1+
Build ID: 74d2e606fd3605fe0a585f596eaa215ae4e20d18
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); Calc: group
Comment 3 Xisco Faulí 2017-05-26 13:52:46 UTC
Created attachment 133619 [details]
backtrace
Comment 4 Xisco Faulí 2017-05-26 13:59:58 UTC
Reproduced in

- Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)

- Version: 5.0.0.0.alpha1+
Build ID: 0db96caf0fcce09b87621c11b584a6d81cc7df86
Locale: ca-ES (ca_ES.UTF-8)

- Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

- Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)

in

- LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4

LibreOffice crashes at import time
Comment 6 Julien Nabet 2017-05-26 16:40:25 UTC
On pc Debian x86-64 with master sources updated 2 days ago, I could reproduce the crash.

I got the same bt:
#3  0x00007fffc295527f in std::stack<std::shared_ptr<writerfilter::dmapper::DomainMapperTableManager>, std::__debug::deque<std::shared_ptr<writerfilter::dmapper::DomainMapperTableManager>, std::allocator<std::shared_ptr<writerfilter::dmapper::DomainMapperTableManager> > > >::top (this=0x55555e493550) at /usr/include/c++/6/bits/stl_stack.h:193
#4  0x00007fffc2953c4e in writerfilter::dmapper::DomainMapper_Impl::getTableManager (this=0x55555e4932b0)
    at /home/julien/lo/libreoffice/writerfilter/source/dmapper/DomainMapper_Impl.hxx:731
#5  0x00007fffc29aa37c in writerfilter::dmapper::DomainMapper_Impl::StartOrEndBookmark (this=0x55555e4932b0, rId="32")
    at /home/julien/lo/libreoffice/writerfilter/source/dmapper/DomainMapper_Impl.cxx:4777
#6  0x00007fffc293c7bb in writerfilter::dmapper::DomainMapper::lcl_attribute (this=0x55555e19fb10, nName=92099, val=...)
    at /home/julien/lo/libreoffice/writerfilter/source/dmapper/DomainMapper.cxx:262

(I put these lines just to show the value of rId)

Miklos: since it's in RTF code, thought you might be interested in this one.
Comment 8 Miklos Vajna 2017-06-02 21:22:18 UTC
I'll have a look at this, though the range is really strange, no writerfilter commits at all.
Comment 9 Commit Notification 2017-06-07 08:33:38 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f5375d5539897bff0aef82df92b7d485b8839004

tdf#108123 RTF paste: fix asymmetric shape <-> table manager stack

It will be available in 5.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2017-06-08 06:04:40 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d51becdd4f469922581924e0ae4c91df2b06beda&h=libreoffice-5-4

tdf#108123 RTF paste: fix asymmetric shape <-> table manager stack

It will be available in 5.4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.