tdf#108123 RTF paste: fix asymmetric shape <-> table manager stack

Make sure that even if the text append stack is empty (and we return
early) the table manager push/pop operations are in sync with the shape
start/end, otherwise we'll have an empty table manager stack.

That is a problem as
writerfilter::dmapper::DomainMapper_Impl::getTableManager() assumes that
it always has at least one element.

Change-Id: I92b3381e820bc8eaeb351532a6ce8909490c0f30
Reviewed-on: https://gerrit.libreoffice.org/38490
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit f5375d5539897bff0aef82df92b7d485b8839004)